# maybach-os

./: .gitignore  LICENSE  README.md  config.example.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml
examples/: daily_intel.py
src/maybach/: __init__.py
src/maybach/core/: __init__.py  agent.py
src/maybach/notify/: notifier.py
src/maybach/web_intel/: crawler.py
