[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maybach-os"
version = "0.1.0"
description = "个人 AI 商业智能体框架 — 爬虫 + AI 分析 + 多渠道推送 + 任务自动化"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MaybachS580", email = "maybach@example.com"}
]
keywords = ["ai", "agent", "web-scraper", "business-intelligence", "automation", "notification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]

requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pyautogui>=0.9.54",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
maybach = "main:main"

[tool.setuptools.packages.find]
where = ["src"]
